Updating UT with w_is_single_node() wrapper

--- a/src/unit_tests/remoted/CMakeLists.txt
+++ b/src/unit_tests/remoted/CMakeLists.txt
@@ -25,7 +25,7 @@ include(${SRC_FOLDER}/unit_tests/wrappers/wazuh/shared/shared.cmake)
 # Generate remoted tests
 list(APPEND remoted_names "test_manager")
 list(APPEND remoted_flags "-Wl,--wrap,_mdebug2 -Wl,--wrap,_mdebug1 -Wl,--wrap,wdb_get_agent_group \
--Wl,--wrap,wdb_set_agent_groups_csv -Wl,--wrap,_merror -Wl,--wrap,w_is_worker")
+-Wl,--wrap,wdb_set_agent_groups_csv -Wl,--wrap,_merror -Wl,--wrap,w_is_single_node")
 
 list(APPEND remoted_names "test_secure")
 list(APPEND remoted_flags "-Wl,--wrap,fopen -Wl,--wrap,fread -Wl,--wrap,fwrite -Wl,--wrap,fclose -Wl,--wrap,remove \
