--- a/src/engine/test/CMakeLists.txt
+++ b/src/engine/test/CMakeLists.txt
@@ -32,6 +32,7 @@ add_subdirectory(${TEST_SOURCE_DIR}/builder)
 add_subdirectory(${TEST_SOURCE_DIR}/graph)
 add_subdirectory(${TEST_SOURCE_DIR}/catalog)
 add_subdirectory(${TEST_SOURCE_DIR}/cliParser)
+add_subdirectory(${TEST_SOURCE_DIR}/threadPool)
 
 # Other tets
 add_subdirectory(${TEST_SOURCE_DIR}/rxcpp)
