--- a/api/test/integration/test_agent_GET_endpoints.tavern.yaml
+++ b/api/test/integration/test_agent_GET_endpoints.tavern.yaml
@@ -762,6 +762,62 @@ stages:
       json:
         <<: *error_spec
 
+  - name: Filter agents by group_config_status (synced)
+    request:
+      verify: False
+      <<: *get_agents
+      params:
+        group_config_status: "synced"
+    response:
+      status_code: 200
+      json:
+        error: 0
+        data:
+          affected_items:
+            - id: '000'
+            - id: '001'
+            - id: '002'
+            - id: '003'
+            - id: '004'
+            - id: '005'
+            - id: '006'
+            - id: '007'
+            - id: '008'
+          failed_items: []
+          total_affected_items: 9
+          total_failed_items: 0
+
+  - name: Filter agents by group_config_status (not synced)
+    request:
+      verify: False
+      <<: *get_agents
+      params:
+        group_config_status: "not synced"
+    response:
+      status_code: 200
+      json:
+        error: 0
+        data:
+          affected_items:
+            - id: '009'
+            - id: '010'
+            - id: '011'
+            - id: '012'
+          failed_items: []
+          total_affected_items: 4
+          total_failed_items: 0
+
+  - name: Try show agents using an invalid group_config_status
+    request:
+      verify: False
+      <<: *get_agents
+      params:
+        group_config_status: invalid
+    response:
+      status_code: 400
+      json:
+        <<: *error_spec
+
   - name: Filter agents by query
     request:
       verify: False
