--- a/api/api/spec/spec.yaml
+++ b/api/api/spec/spec.yaml
@@ -5897,6 +5897,7 @@ paths:
     get:
       tags:
         - Agents
+      deprecated: true
       summary: "Get configuration sync status"
       description: "Return whether the agent configuration has been synchronized with the agent or not. This can be
       useful to check after updating a group configuration"
