--- a/api/test/integration/test_agent_GET_endpoints.tavern.yaml
+++ b/api/test/integration/test_agent_GET_endpoints.tavern.yaml
@@ -4350,11 +4350,16 @@ stages:
       json:
         error: !anyint
         data:
-          active: 8
-          disconnected: 2
-          never_connected: 2
-          pending: 0
-          total: 12
+          connection:
+            active: 8
+            disconnected: 2
+            never_connected: 2
+            pending: 0
+            total: 12
+          configuration:
+            synced: 8
+            not_synced: 4
+            total: 12
 
 ---
 test_name: GET /agents/summary/os
